--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
 		},
 
   "permissions": ["tabs", "activeTab", "bookmarks",
-	"chrome://favicon/", "file:///*"],
+	"chrome://favicon/"],
 
 	"browser_action": {
 		"default_icon": {
